@startuml
'https://plantuml.com/class-diagram

skinparam classAttributeIconSize 0
hide empty attributes
skinparam classBackgroundColor beige
skinparam ArrowColor #222222



'SHARED VALUE OBJETS



 class ConfigFileName <<(V,#FF8B40) value object>> {}
'SERVICES

package "<<aggregate>> Interview Model" {
    entity InterviewModel <<entity>> <<root>>  {}
    class InterviewModelName <<(V,#FF8B40) value object>> <<identifier>> {}
    class InterviewModelDescription <<(V,#FF8B40) value object>> {}

}
package "<<aggregate>> Requirement Specification" {
    entity RequirementSpecification <<entity>> <<root>>  {}
    class RequirementName <<(V,#FF8B40) value object>> <<identifier>> {}
    class RequirementDescription <<(V,#FF8B40) value object>> {}
}
'AGGREGATES
package "<<aggregate>> Job Opening" {
    entity JobOpening <<entity>> <<root>> {}
    class JobFunction <<(V,#FF8B40) value object>> {}
    class JobOpeningStatus <<(V,#FF8B40) value object>> {}
    class ContractType <<(V,#FF8B40) value object>> {}
    class Mode <<(V,#FF8B40) value object>> {}
    class NumberVacancy <<(V,#FF8B40) value object>> {}
       class Description <<(V,#FF8B40) value object>> {}
     class JobReference <<(V,#FF8B40) value object>> <<identifier>> {}
         class Address <<(V,#FF8B40) value object>> {}
}

package "<<aggregate>> Customer Manager" {
    entity CustomerManager <<entity>> <<root>>  {}
}


package "<<aggregate>> Recruitment Process" {
    entity RecruitmentProcess <<entity>> <<root>> {}
    class RecruitmentPeriod <<(V,#FF8B40) value object>> {}
    entity Phase <<entity>> {}
    class PhasePeriod <<(V,#FF8B40) value object>> {}
    class PhaseDescription <<(V,#FF8B40) value object>> {}
    class PhaseType <<(V,#FF8B40) value object>> {}
    class PhaseStatus <<(V,#FF8B40) value object>> {}
}




CustomerManager --> "1..*" JobOpening: registers
CustomerManager --> "1..*" RecruitmentProcess : sets up
CustomerManager --> "1..*" InterviewModel : selects
CustomerManager ---> "1..*" RequirementSpecification : selects

JobOpening ---> "1"  JobReference : includes
JobOpening --> "1"  Mode : includes
JobOpening --> "1"  NumberVacancy : includes
JobOpening ---> "1"  Address : includes
JobOpening --> "1"  JobFunction : includes
JobOpening ---> "1"  Description : includes
JobOpening ---> "1"  ContractType : includes
JobOpening --> "1" JobOpeningStatus : classified by
JobOpening -> "1"  RequirementSpecification : includes
JobOpening --> "1"  InterviewModel : includes
JobOpening --> "1"  RecruitmentProcess : includes
'--
RecruitmentProcess --> "1" RecruitmentPeriod : goes on for
RecruitmentProcess ---> "5..6" Phase : encompasses
'--
Phase --> "1" PhasePeriod :  goes on for
Phase --> "1" PhaseType : categorizes <
Phase --> "1" PhaseStatus : categorizes <
Phase --> "1" PhaseDescription : describes <
'--
InterviewModel --> "1" InterviewModelName: identifies <
InterviewModel --> "1" InterviewModelDescription: describes <
InterviewModel --> "1" ConfigFileName: configures <
'--
RequirementSpecification --> "1" RequirementName: identifies <
RequirementSpecification --> "1" RequirementDescription: describes <
RequirementSpecification --> "1" ConfigFileName: configures <
@enduml